<resources>
    <string name="app_name">M-Hike</string>
    <string name="txtName">Name Of Hike</string>
    <string name="txtLocation">Location</string>
    <string name="txtDate">Date of the hike</string>
    <string name="btnDate">CHOOSE DATE</string>
    <string name="txtParking">Parking available</string>
    <string name="txtYes">Yes</string>
    <string name="txtNo">No</string>
    <string name="txtLenght">Length the hike (KM)</string>
    <string name="txtDifficulty">Level of difficulty</string>
    <string name="txtDescription">Description</string>
    <string name="txtAdditional1">Additional1</string>
    <string name="txtAdditional2">Highest Point </string>
    <string name="btnNext">Next</string>
    <string name="btnBack">Back</string>
    <string name="btnSave">Save</string>
    <string name="btnDetail">Detail</string>
    <string name="btnEdit">Edit</string>
    <string name="btnDelete">Delete</string>
    <string name="lblObservation">Observation</string>
    <string name="lblComment">Comment</string>
    <string name="btnView">View</string>
    <string name="lblDate">Date time</string>
    <string name="GroupName">Hike Group Name</string>
</resources>