<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HikeAdvanceSearchActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textAdvView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtName" />

    <EditText
        android:id="@+id/txtAdvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />
    <TextView
        android:id="@+id/textAdvView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtLocation" />

    <Spinner
        android:id="@+id/spnAdvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textAdvView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtDate" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtAdvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnAdvDate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/btnDate" />

            </LinearLayout>
    <TextView
        android:id="@+id/textAdvView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtLenght" />

    <EditText
        android:id="@+id/txtAdvLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />


    <Button
        android:id="@+id/btnAdvSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Search" />


</LinearLayout>