<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adapter.ObservationViewActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblObservation" />

    <TextView
        android:id="@+id/lblObservationViewObservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblDate" />

    <TextView
        android:id="@+id/lblObservationViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblComment" />

    <TextView
        android:id="@+id/lblObservationViewComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Str1" />

    <TextView
        android:id="@+id/lblObservationViewStr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Str2" />

    <TextView
        android:id="@+id/lblObservationViewStr2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/btnObservationViewClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Close" />

</LinearLayout>